[gd_scene load_steps=8 format=3 uid="uid://7le8u6k1gwb7"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_mujna"]
[ext_resource type="Texture2D" uid="uid://d020jy57bcsta" path="res://assets/ui/health_uitest.png" id="2_m1e6a"]
[ext_resource type="Texture2D" uid="uid://crrypmk57spm" path="res://assets/ui/progress bar.png" id="2_nng7e"]
[ext_resource type="PackedScene" uid="uid://bbqprigllt4hc" path="res://characters/player/player.tscn" id="2_ubo8u"]
[ext_resource type="Script" path="res://scripts/Rooms.gd" id="4_k14fd"]
[ext_resource type="PackedScene" uid="uid://cr6n2jf0djmfp" path="res://characters/npcs/test_npc.tscn" id="6_3y2pd"]

[sub_resource type="GDScript" id="GDScript_umt1g"]
script/source = "extends Node2D


func _init() -> void: 
	randomize() #randomizes the seed, need for random rooms!
"

[node name="Game" type="Node2D"]
script = SubResource("GDScript_umt1g")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_mujna")

[node name="HealthBar" type="TextureProgressBar" parent="UI"]
offset_left = 12.0
offset_top = 12.0
offset_right = 92.0
offset_bottom = 28.0
value = 23.0
texture_over = ExtResource("2_m1e6a")
texture_progress = ExtResource("2_nng7e")
tint_progress = Color(0.513726, 0.054902, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 10.0
offset_bottom = -30.0
grow_vertical = 0

[node name="Inventory" type="HBoxContainer" parent="UI/PanelContainer"]
layout_mode = 2

[node name="Rooms" type="NavigationAgent2D" parent="."]
debug_enabled = true
script = ExtResource("4_k14fd")

[node name="Player" parent="." instance=ExtResource("2_ubo8u")]
z_index = 1
position = Vector2(190, 240)

[node name="test_npc" parent="." instance=ExtResource("6_3y2pd")]
z_index = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.203922, 0.305882, 0.337255, 1)

[connection signal="hp_changed" from="Player" to="UI" method="_on_player_hp_changed"]
[connection signal="weapon_droped" from="Player" to="UI" method="_on_player_weapon_droped"]
[connection signal="weapon_picked_up" from="Player" to="UI" method="_on_player_weapon_picked_up"]
[connection signal="weapon_switched" from="Player" to="UI" method="_on_player_weapon_switched"]
